--- a/tesla-clone/src/index.css
+++ b/tesla-clone/src/index.css
@@ -8,5 +8,17 @@
 
 body {
   width: 100%;
-  
+  overflow-x:hidden;
+}
+
+@keyframes animateDown {
+  0%, 20%, 50%,  100%{
+    transform: translateY();
+  }
+  40%, 80%{
+    transform: translateY(5px);
+  }
+  60%{
+    transform: translateY(3px);
+  }
 }
