--- a/tesla-clone/src/index.css
+++ b/tesla-clone/src/index.css
@@ -4,6 +4,7 @@
   /* color: #393c41; */
   margin: 0;
   padding: 0;
+  color: black;
 }
 
 body {
@@ -21,4 +22,8 @@ body {
   60%{
     transform: translateY(3px);
   }
+}
+
+a{
+  text-decoration: none;
 }
